# UnitedCTF2024

./: .gitignore  CONTRIBUTING.md  README.md
.github/: CONTRIBUTING.md
.github/challenge-example/solution/: README.md
challenges/: README.md  challenge.yml
challenges/ML/standdetir/: readme.md
challenges/ML/standdetir1/: readme.md  standdetir1.yml
challenges/ML/standdetir2/: readme.md  standdetir2.yml
challenges/ML/standdetir3/: readme.md  standdetir3.yml
challenges/ai/cartesian-glide/: Dockerfile  README.md  challenge-1.yml  challenge.yml  docker-compose.yml  pyproject.toml  requirements.txt
challenges/ai/cartesian-glide/data/: scatter-data.csv
challenges/ai/cartesian-glide/script/: README.md  index.html  main.py
challenges/ai/cartesian-glide/solution/: README.md  biggest_gap.py  extracted_data_from_challenge.csv  generate_model.py  own_model.pkl  solve.py
challenges/ai/cartesian-glide/src/: entrypoint.sh  model.pkl  server.py  template.py
challenges/ai/helpful-assistant/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  app.py  challenge-1.yml  challenge-2.yml  challenge.yml  const.py  how_to_run.md  is_admin_cloud_function.py  pyproject.toml  requirements.txt  robots.txt  template.json  utils.py
challenges/ai/helpful-assistant/llm_server/: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  requirements.txt  valid_prompt.md
challenges/ai/helpful-assistant/solution/: .env.example  README.md  benchmark_prompt.py  prompt_data.json  prompts.py
challenges/ai/helpful-assistant/templates/: admin.html  base.html  chat.html  home.html  login.html  no.html  request_access.html
challenges/pwn/united-slots/: CMakeLists.txt  Dockerfile  README.md  UnitedSlots1  UnitedSlots2  docker-compose.yml  unitedslots1.cpp  unitedslots1.yml  unitedslots2.cpp  unitedslots2.yml
challenges/pwn/united-slots/solution/: README.md  solve1.py  solve2.py
challenges/reverse/cms-reverse/Source/RustSource/: Cargo.toml
challenges/reverse/cms-reverse/Source/RustSource/src/: bin.rs  main.rs
challenges/solution/: README.md
infra/stacks/: traefik.yml
(+877 files in other folders)
