[tool.poetry]
name = "cartesian-glide"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.0.1"
matplotlib = "^3.9.2"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"

[tool.poetry.group.solution.dependencies]
pwntools = "^4.13.0"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
