[tool.poetry]
name = "helpful-assistant"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
google-cloud-logging = "^3.11.2"
python-dotenv = "^1.0.1"
flask = "^3.0.3"
functions-framework = "^3.8.1"
gunicorn = "^23.0.0"


[tool.poetry.group.llm.dependencies]
langfuse = "^2.45.1"
openai = "^1.43.0"
ollama = "^0.3.2"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
