[package]
name = "cms-reverse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
sha2 = "0.10.8"
threadpool = "1.8.1"
reqwest = "0.12.5"
tokio-macros = { version = "2.3.0" }
tokio = { version = "1", features = ["full"]}
const_format = "0.2.0"
async-recursion = "1.0.5"
base64 = "0.22.1"
